@@ -1,11 +1,11 @@
 Package: data.table
-Version: 1.8.0
+Version: 1.7.9
 Title: Extension of data.frame for fast indexing, fast ordered joins, fast assignment, fast grouping and list columns.
 Author: M Dowle, T Short, S Lianoglou
 Maintainer: M Dowle <datatable-help@lists.r-forge.r-project.org>
 Depends: R (>= 2.12.0)
 Imports: methods
-Suggests: chron, ggplot2, plyr, testthat (>= 0.4), hexbin
+Suggests: chron, ggplot2, plyr, reshape, testthat (>= 0.4), hexbin
 Description: Enhanced data.frame. Fast indexing, fast ordered joins, fast assignment, fast grouping and list columns in a short and flexible syntax. i and j may be expressions of column names directly, for faster development.  Example: X[Y] is a fast join for large data.
 License: GPL (>= 2)
 URL: http://datatable.r-forge.r-project.org/, http://rwiki.sciviews.org/doku.php?id=packages:cran:data.table, http://crantastic.org/packages/data.table
